# vangelis

./: .gitattributes  .gitignore  AGENTS.md  AUDIO_RESEARCH_AND_RUST_GUIDE.md  CATALOG_LEDGER.md  CLAUDE.md  EFFECTS_REBUILD_PLAN.md  ENGINE_DESCENT.md  ENGINE_LEDGER.md  INTERFACE_LEDGER.md  INTERFACE_PURGE.md  MOBILE_DESIGN_LOG.md  MOBILE_DESIGN_LOOP.md  PERFORMANCE_LEDGER.md  PROGRESS.md  README.md  backend_guide.md  build-pages.sh  guide.md  index.html  package.json  sw.js  test_api.sh  ui-guide.md  vercel.json
.claude/: launch.json
.github/workflows/: deploy.yml
api/: phrase-loop.js  sound-catalog.js  status.js  voice-phrase.js
assets/: index-Bks8oNWI.js  index-Dt2EeQ18.css
pkg/: package.json  sound_engine.d.ts  sound_engine.js  sound_engine_bg.wasm  sound_engine_bg.wasm.d.ts
scripts/: vercel-build.sh
sound-engine/: .gitignore  LICENSE_MIT  build_and_run.sh
sound-engine/audio-engine/: Cargo.toml
sound-engine/audio-engine/src/: dsp.rs  envelope.rs  filter.rs  lfo.rs  lib.rs  waveforms.rs
sound-engine/backend/: Cargo.toml
sound-engine/backend/src/: main.rs
sound-engine/frontend/: SOUND_LIBRARY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
sound-engine/frontend/api/: phrase-loop.js  sound-catalog.js  status.ts  vocal-search.js  voice-phrase.js
sound-engine/frontend/public/: sw.js
sound-engine/frontend/raylib/: README.md  build_wavecandy.sh  wavecandy.c
sound-engine/pipeline/: README.md  bootstrap.sh  midi_pipeline.py  requirements.txt
stem_splitter_service/: __init__.py  app.py
(+372 files in other folders)
