[package]
name = "sound-engine"
version = "0.1.0"
authors = ["yunguid <123339269+yunguid@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
rayon = "1.7.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Maximum optimization for performance
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.release.package."*"]
opt-level = 3
